[gd_scene load_steps=17 format=3 uid="uid://d0wbwswfdfujt"]

[ext_resource type="Script" path="res://scripts/rotate.gd" id="1_13fem"]
[ext_resource type="Script" path="res://scripts/mainmenubuttons.gd" id="2_8ds7t"]
[ext_resource type="AudioStream" uid="uid://bohk72ammyu84" path="res://music/everlasting.ogg" id="3_fyb7d"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lgk0t"]
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(2.11775e-06, 0.560671, 0.343166, 1)
metallic = 0.19
metallic_specular = 0.7
roughness = 0.0
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.3

[sub_resource type="BoxMesh" id="BoxMesh_mo1vg"]
material = SubResource("StandardMaterial3D_lgk0t")
flip_faces = true

[sub_resource type="Gradient" id="Gradient_wft4t"]
interpolation_mode = 2

[sub_resource type="FastNoiseLite" id="FastNoiseLite_pcnn6"]
noise_type = 4
frequency = 0.0123
fractal_type = 0
domain_warp_enabled = true
domain_warp_type = 2
domain_warp_amplitude = 25.565
domain_warp_frequency = 0.53
domain_warp_fractal_lacunarity = 6.96
domain_warp_fractal_gain = 0.205

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_cqxsk"]
height = 1
color_ramp = SubResource("Gradient_wft4t")
noise = SubResource("FastNoiseLite_pcnn6")

[sub_resource type="Gradient" id="Gradient_5w01e"]
colors = PackedColorArray(1, 0, 0, 1, 0, 1, 0, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ngthl"]
noise_type = 3
seed = 210
frequency = 0.051
fractal_type = 2
fractal_octaves = 1
fractal_lacunarity = 0.955
fractal_gain = -26.305
fractal_weighted_strength = 0.48

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_l2ksr"]
width = 16
height = 16
seamless = true
as_normal_map = true
color_ramp = SubResource("Gradient_5w01e")
noise = SubResource("FastNoiseLite_ngthl")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_o3apb"]
noise_type = 5
fractal_octaves = 10

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_e032s"]
width = 64
height = 64
as_normal_map = true
noise = SubResource("FastNoiseLite_o3apb")

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_o3qpr"]
sky_top_color = Color(0.525633, 0.413012, 0.448401, 1)
sky_horizon_color = Color(0.425433, 0.723059, 0.639985, 1)
sky_curve = 0.395852
sky_energy_multiplier = 4.95
sky_cover = SubResource("NoiseTexture2D_e032s")
sky_cover_modulate = Color(0.835294, 0.431373, 0.431373, 1)
ground_bottom_color = Color(0.298983, 0.0779004, 0.194912, 1)
ground_horizon_color = Color(0.743803, 0.652578, 0.276706, 1)
ground_curve = 0.196984
ground_energy_multiplier = 0.21
sun_curve = 0.361374

[sub_resource type="Sky" id="Sky_xlm6w"]
sky_material = SubResource("ProceduralSkyMaterial_o3qpr")
radiance_size = 0

[sub_resource type="Environment" id="Environment_4kg18"]
background_mode = 2
sky = SubResource("Sky_xlm6w")
ambient_light_source = 2
ambient_light_color = Color(0.815125, 0.446224, 0.49695, 1)
ambient_light_energy = 0.21
reflected_light_source = 2
tonemap_mode = 2
tonemap_exposure = 1.32
tonemap_white = 16.0
glow_enabled = true
glow_levels/1 = 0.9
glow_levels/3 = 0.82
glow_levels/7 = 0.35
glow_intensity = 3.16
glow_strength = 1.42
glow_mix = 0.166
glow_bloom = 0.05
glow_blend_mode = 4
glow_hdr_threshold = 1.04
glow_hdr_scale = 1.83
glow_hdr_luminance_cap = 81.9
glow_map_strength = 1.0
glow_map = SubResource("NoiseTexture2D_l2ksr")
volumetric_fog_albedo = Color(1, 0, 0, 1)
volumetric_fog_emission_energy = 0.0
volumetric_fog_gi_inject = 2.43
volumetric_fog_length = 182.57
volumetric_fog_detail_spread = 5.27803
volumetric_fog_sky_affect = 0.492
adjustment_enabled = true
adjustment_brightness = 0.75
adjustment_contrast = 2.01
adjustment_saturation = 0.41
adjustment_color_correction = SubResource("NoiseTexture2D_cqxsk")

[node name="Node3D" type="Node3D" node_paths=PackedStringArray("secret_menu", "small", "big", "galss", "hyper")]
script = ExtResource("2_8ds7t")
level_1_FPath = "res://scenes/levelselect.tscn"
credits_path = "res://scenes/credits.tscn"
secret_menu = NodePath("secrets")
small = NodePath("secrets/small")
big = NodePath("secrets/big")
galss = NodePath("secrets/glass")
hyper = NodePath("secrets/hyper")

[node name="backround" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_mo1vg")
script = ExtResource("1_13fem")
spin = 3
speed = 0.01

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
light_color = Color(1, 0, 1, 1)
light_energy = 3.198
light_indirect_energy = 0.677
light_volumetric_fog_energy = 0.03
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4kg18")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.902156)
current = true
fov = 37.8493

[node name="name" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "PROJECT: SL0P ZER0 BOUNDLE55"

[node name="start" type="Button" parent="."]
offset_left = 8.0
offset_top = 290.0
offset_right = 65.0
offset_bottom = 321.0
focus_mode = 0
text = "BEGIN"
flat = true

[node name="credits" type="Button" parent="."]
offset_left = 8.0
offset_top = 333.0
offset_right = 80.0
offset_bottom = 364.0
focus_mode = 0
text = "CREDITS"
flat = true

[node name="exit" type="Button" parent="."]
offset_left = 8.0
offset_top = 376.0
offset_right = 65.0
offset_bottom = 407.0
focus_mode = 0
text = "EXIT"
flat = true

[node name="ReferenceRect" type="ReferenceRect" parent="."]
visible = false
offset_left = 9.0
offset_top = 247.0
offset_right = 65.0
offset_bottom = 407.0

[node name="ReferenceRect2" type="ReferenceRect" parent="."]
visible = false
offset_left = 9.0
offset_top = 278.0
offset_right = 65.0
offset_bottom = 290.0

[node name="ReferenceRect3" type="ReferenceRect" parent="."]
visible = false
offset_left = 9.0
offset_top = 321.0
offset_right = 65.0
offset_bottom = 333.0

[node name="ReferenceRect4" type="ReferenceRect" parent="."]
visible = false
offset_left = 9.0
offset_top = 364.0
offset_right = 65.0
offset_bottom = 376.0

[node name="CheckBox" type="CheckBox" parent="."]
offset_left = 509.0
offset_top = 4.0
offset_right = 635.0
offset_bottom = 35.0
focus_mode = 0
text = "FULLSCREEN"

[node name="version" type="Label" parent="."]
offset_left = 554.0
offset_top = 398.0
offset_right = 633.0
offset_bottom = 421.0
text = "BETA 0.1.5"
horizontal_alignment = 2

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fyb7d")
autoplay = true

[node name="secrets" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 399.0
offset_top = 91.0
offset_right = 640.0
offset_bottom = 215.0

[node name="Label" type="Label" parent="secrets"]
layout_mode = 0
offset_top = -23.0
offset_right = 241.0
text = "Secret Menu ðŸ¤¯ðŸ¤¯ðŸ¤¯"
horizontal_alignment = 1

[node name="small" type="CheckButton" parent="secrets"]
layout_mode = 0
offset_right = 241.0
offset_bottom = 31.0
focus_mode = 0
text = "small:"

[node name="big" type="CheckButton" parent="secrets"]
layout_mode = 0
offset_top = 31.0
offset_right = 241.0
offset_bottom = 62.0
focus_mode = 0
text = "big:"

[node name="glass" type="CheckButton" parent="secrets"]
layout_mode = 0
offset_top = 62.0
offset_right = 241.0
offset_bottom = 93.0
focus_mode = 0
text = "glass:"

[node name="hyper" type="CheckButton" parent="secrets"]
layout_mode = 0
offset_top = 93.0
offset_right = 241.0
offset_bottom = 124.0
focus_mode = 0
text = "hyper:"

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="toggled" from="CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="secrets/small" to="." method="_on_small_pressed"]
[connection signal="pressed" from="secrets/big" to="." method="_on_big_pressed"]
[connection signal="pressed" from="secrets/glass" to="." method="_on_glass_pressed"]
[connection signal="pressed" from="secrets/hyper" to="." method="_on_hyper_pressed"]
